Fix an issue with automatic scroll and nested overflow-scroll containers

--- a/styles/modules/_utils.scss
+++ b/styles/modules/_utils.scss
@@ -53,7 +53,8 @@
 .swipe-back .overflow-scroll,
 .deactivate .overflow-scroll,
 .overflow-scroll.swipe-back,
-.overflow-scroll.deactivate {
+.overflow-scroll.deactivate,
+.overflow-scroll.disable-scroll {
 	overflow: hidden !important;
 	-webkit-overflow-scrolling: auto !important;
 		overflow-scrolling: auto !important;
